--- a/cpcx/appsettings.json
+++ b/cpcx/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Postcard": {
+    "MaxDifferenceBetweenSentAndReceived": 2,
+    "MaxTravellingPostcards": 4
+  },
   "AllowedHosts": "*"
 }
