Postcard send, register and user profile scaffold Fix seed data user credentials Register postcard Cpcx only handles one event per instance (even though the DB can do more than one)

--- a/cpcx/cpcx.csproj
+++ b/cpcx/cpcx.csproj
@@ -26,12 +26,13 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
+    <PackageReference Include="TagHelperSamples.Authorization" Version="3.0.56" />
+    <PackageReference Include="TagHelperSamples.Bootstrap" Version="2.0.49" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Migrations\" />
     <Folder Include="Pages\Admin\Events\" />
-    <Folder Include="Pages\Postcard\" />
   </ItemGroup>
 
 </Project>
