--- a/cpcx/appsettings.json
+++ b/cpcx/appsettings.json
@@ -8,6 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Cpcx": {
+    "ActiveEventId": "E26"
+  },
   "Postcard": {
     "MaxDifferenceBetweenSentAndReceived": 2,
     "MaxTravellingPostcards": 4
