Fix security stamp missing exception on seeded users Add user service for counting travelling postcards Send postcard start

--- a/cpcx/appsettings.json
+++ b/cpcx/appsettings.json
@@ -13,7 +13,8 @@
   },
   "Postcard": {
     "MaxDifferenceBetweenSentAndReceived": 2,
-    "MaxTravellingPostcards": 4
+    "MaxTravellingPostcards": 4,
+    "PostcardExpirationTimeInHours": 3
   },
   "AllowedHosts": "*"
 }
