Didn't check this in earlier lol

--- a/cpcx/appsettings.json
+++ b/cpcx/appsettings.json
@@ -9,7 +9,8 @@
     }
   },
   "Cpcx": {
-    "ActiveEventId": "E26"
+    "ActiveEventId": "E26",
+    "AvatarPath": "wwwroot/zooka/avatars"
   },
   "Postcard": {
     "MaxDifferenceBetweenSentAndReceived": 2,
